--- a/styles.css
+++ b/styles.css
@@ -2503,9 +2503,9 @@ div.card-body > p > i{
 }
 
 .estado-entrega {
-    color: cornflowerblue !important;
+    color: white !important;
     font-weight: bold !important;
-    background-color: #fbf9ed !important;
+    background-color: #fb7f69 !important;
     background-color: rgba(253, 208, 140, 0.255);
 }
 
