--- a/styles.css
+++ b/styles.css
@@ -2505,7 +2505,7 @@ div.card-body > p > i{
 .estado-entrega {
     color: white !important;
     font-weight: bold !important;
-    background-color: #fb7f69 !important;
+    background-color: #8f8f8f !important;
     background-color: rgba(253, 208, 140, 0.255);
 }
 
