--- a/styles.css
+++ b/styles.css
@@ -2503,10 +2503,9 @@ div.card-body > p > i{
 }
 
 .estado-entrega {
-    color: white !important;
+    color: green !important;
     font-weight: bold !important;
-    background-color: #8f8f8f !important;
-    background-color: rgba(253, 208, 140, 0.255);
+    background-color: rgba(172, 255, 47, 0.255);
 }
 
 .valor-columna {
