--- a/styles.css
+++ b/styles.css
@@ -2248,7 +2248,7 @@ div.card-body > p > i{
     justify-content: flex-start; /* Alinear horizontalmente al inicio */
 }
 
-/* SWITCH ENTREGADO */
+/* SWITCH REDUCIDO */
 .form-check {
     display: flex;
     flex-direction: column; 
@@ -2257,9 +2257,10 @@ div.card-body > p > i{
 }
 
 .form-check-input {
-    width: 50px; /* Aumentar el ancho */
-    height: 30px; /* Aumentar la altura */
-    background-color: #e0e0e0;
+    width: 40px; 
+    height: 20px; 
+    background-color: cornsilk;
+    border: solid 1px rgba(128, 128, 128, 0.456);
     border-radius: 50px;
     cursor: pointer;
     -webkit-appearance: none;
@@ -2273,30 +2274,31 @@ div.card-body > p > i{
 }
 
 .form-check-input:checked::before {
-    transform: translateX(20px);
+    transform: translateX(18px); /* Ajustar la posición del círculo */
 }
 
 .form-check-input::before {
     content: '';
     position: absolute;
-    width: 30px; 
-    height: 30px;
+    width: 25px; 
+    height: 25px; 
     background-color: white;
+    border: solid 1px grey;
     border-radius: 50%;
     transition: transform 0.3s;
-    top: 0;
+    top: -2px; 
     left: 0;
     box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2); 
 }
 
 .form-check-label {
-    margin-top: 35px;
-    margin-left: -18px; 
-    font-size: 14px; 
+    margin-top: 25px; 
+    margin-left: -12px; 
+    font-size: 12px; 
     color: #333; 
     cursor: pointer;
 }
-/* FIN SWITCH ENTREGADO */
+/* FIN SWITCH REDUCIDO */
 
 /* Estilo para el alert */
 .alert {
