--- a/styles.css
+++ b/styles.css
@@ -1105,9 +1105,10 @@ p.card-text{
 }
 
 .cpLocalidad-meli {
+    font-family: "Roboto Condensed", sans-serif;
     padding: 6px 12px !important;
     font-size: 0.85rem;
-    font-weight: 600 !important;
+    font-weight: 500 !important;
     width: fit-content;
     background-color: whitesmoke;
     border: solid 1px #007aff;
