--- a/styles.css
+++ b/styles.css
@@ -2802,7 +2802,7 @@ div.card-body > p > i{
     color: cornflowerblue !important;
     background-color: cornflowerblue;
 }
-
+/* Fin Estilos del carrusel */
 
 
 
