--- a/styles.css
+++ b/styles.css
@@ -2793,7 +2793,7 @@ div.card-body > p > i{
 .carousel {
     border: solid 1px cornflowerblue;
     background-color: white; 
-    border-radius: 10px; 
+    border-radius: 10px 10px 0 0; 
     margin-bottom: 5px; 
     overflow: hidden;
 }
@@ -2803,6 +2803,23 @@ div.card-body > p > i{
     background-color: cornflowerblue;
 }
 /* Fin Estilos del carrusel */
+
+.macos-style {
+    text-align: center;
+    background-color: white; 
+    border-radius: 0 0 5px 5px;
+    padding: 10px 5px 5px; 
+    height: 38px;
+    border: cornflowerblue solid 1px;
+    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif;
+    color: cornflowerblue;
+    font-weight: 400;
+    margin-top: -15px;
+    margin-bottom: 5px;
+    font-size: 16px; 
+}
+
+
 
 
 
