--- a/styles.css
+++ b/styles.css
@@ -1304,16 +1304,16 @@ p.card-text:nth-child(9){
     text-align: center;
     padding: 0.5rem;
     width: fit-content;
-    border-radius: 20px;
+    border-radius: 10px 10px 0 0;
     border: solid 1px rgb(145, 182, 250); /* Borde transparente inicialmente */
     color: black; /* Texto en un verde oscuro */
     font-size: 1.4rem;
     font-family: "Roboto", sans-serif !important;
     font-weight: 600;
     margin-bottom: 14px !important;
-    box-shadow: 0 0px 14px rgba(100, 148, 237, 0.471), inset 0 1px 1px rgba(255, 255, 255, 0.4), inset 0 -1px 1px rgba(0, 0, 0, 0.02);
     transition: background 0.3s ease, box-shadow 0.3s ease, transform 0.2s ease;
     transition: .5s;
+    margin-bottom: -5px !important;
 }
 
 .remitoCardMeli:hover{
@@ -2793,7 +2793,7 @@ div.card-body > p > i{
 .carousel {
     border: solid 1px cornflowerblue;
     background-color: white; 
-    border-radius: 10px 10px 0 0; 
+    border-radius: 0; 
     margin-bottom: 5px; 
     overflow: hidden;
 }
