--- a/styles.css
+++ b/styles.css
@@ -3026,6 +3026,97 @@ strong {
     background-color: #0056b3;
   }
   
+  /* NOTIFICACION DE NUEVAS VENTAS */
+  .notification {
+    border: dashed cornflowerblue 2px;
+    bottom: 50px;
+    position: fixed;
+    background-color: #f7f7fc;
+    border-radius: 15px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.314);
+    padding: 20px;
+    margin: 20px;
+    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif;
+    color: #333;
+    transition: all 0.3s ease;
+}
+
+.notification .d-flex {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.notification .close {
+    background: none;
+    border: none;
+    font-size: 1.5rem;
+    color: #ff3b30;
+    cursor: pointer;
+    transition: color 0.2s ease;
+    position: absolute;
+    top: 10px;
+    right: 10px;
+}
+
+.notification .close:hover {
+    color: #d32f2f;
+}
+
+.notification .btn {
+    background-color: orangered;
+    border: none;
+    border-radius: 10px;
+    color: #fff;
+    padding: 10px 20px;
+    font-size: 1rem;
+    cursor: pointer;
+    transition: background-color 0.3s ease;
+    display: flex;
+    align-items: center;
+}
+
+.notification .btn:hover {
+    background-color: #005bb5;
+}
+
+.notification .btn .icon {
+    margin-right: 8px;
+    font-size: 1.2rem;
+}
+
+.notification .icon-info {
+    color: #007aff;
+    margin-right: 10px;
+    font-size: 1.5rem;
+}
+  /* FIN NOTIFICACION DE NUEVAS VENTAS */
+
+  .ios-style-id {
+    font-size: 12px;
+    font-weight: 600;
+    color: #ffffff;
+    background-color: #1e90ff;
+    padding: 5px 18px;
+    border-radius: 12px 12px 0 0;
+    text-align: center;
+    border: none;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    transition: background-color 0.3s ease;
+}
+
+.ios-style-id:hover {
+    background-color: #1c86ee;
+}
+
+.ios-style-id-container > select{
+    margin-bottom: 0 !important;
+    border-radius: 0 0 10px 10px !important;
+}
+
+
+
+
 
 
 
