--- a/styles.css
+++ b/styles.css
@@ -1507,7 +1507,7 @@ div.card-body > p > i{
 /* ORDENAR MAS ANTIGUO Y NUEVO */
 .input-group {
     border: solid 1px rgba(128, 128, 128, 0.475);
-    border-radius: 8px;
+    border-radius: 12px;
     overflow: hidden;
     box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
 }
@@ -3126,7 +3126,23 @@ div.card-body > p > i{
     100% { background-color: #a32100; } /* Naranja vibrante */
 }
 
+#estadoFilter{
+    width: auto;
+    margin-bottom: 0;
+}
 
+.contenedorSelect{
+    padding: 5px;
+    border-radius: 6px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: #767676;
+}
+
+#contadorNotificaciones{
+    right: -10px !important;
+}
 
 
 
