--- a/styles.css
+++ b/styles.css
@@ -1669,34 +1669,36 @@ div.card-body > p > i{
 
 .em-circle-ME1{
     font-family: -apple-system, BlinkMacSystemFont, "Helvetica Neue", sans-serif;
+    font-weight: 800;
     font-size: 0.75rem;
     text-transform: uppercase;
-    padding: 6px 12px;
-    border-radius: 50px;
-    position: absolute;
-    top: -18px;
-    left: 10px;
+    padding: 5px;
+    border-radius: 0 0 5px 5px;
+    margin-top: -10px;
     background-color: orange; 
     color: white;
     display: flex;
     align-items: center;
     justify-content: center;
+    margin-bottom: 5px !important;
+    z-index: -100;
 }
 
 .em-circle-ME2{
     font-family: -apple-system, BlinkMacSystemFont, "Helvetica Neue", sans-serif;
+    font-weight: 800;
     font-size: 0.75rem;
     text-transform: uppercase;
-    padding: 6px 12px;
-    border-radius: 50px;
-    position: absolute;
-    top: -18px;
-    left: 10px;
+    padding: 5px;
+    border-radius: 0 0 5px 5px;
+    margin-top: -10px;
     background-color: cornflowerblue; 
     color: white;
     display: flex;
     align-items: center;
     justify-content: center;
+    margin-bottom: 5px !important;
+    z-index: -100;
 }
 
 .em-circle-isNotFraud::before {
