--- a/styles.css
+++ b/styles.css
@@ -2913,6 +2913,28 @@ div .form-check {
     margin-top: 0;
 }
 
+.puntos {
+    display: flex;
+    align-items: center;
+    background-color: #deffa1;
+    color: green; 
+    padding: 12px 16px;
+    border: 1px solid green; 
+    border-radius: 10px; 
+    margin: 8px 0;
+    font-size: small;
+    font-family: 'San Francisco', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, 'Helvetica Neue', sans-serif;
+    font-weight: 600;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    margin-top: 0;
+}
+
+.puntos-icon {
+    margin-right: 10px;
+    font-size: 1.5em;
+    color: green; 
+}
+
 .carrito-icon {
     margin-right: 10px;
     font-size: 1.5em;
